manifests/serving-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: tf-serving-svc
  namespace: serving

spec:
  type: ClusterIP
  selector:
    app: tf-serving

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8501
