manifests/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tf-serving-ingress-policy
  namespace: serving
spec:
  podSelector:
    matchLabels:
      app: tf-serving
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}
        - ipBlock:
            cidr: 10.20.11.237/32
        - ipBlock:
            cidr: 10.20.53.144/32
      ports:
        - protocol: TCP
          port: 8501
